--- a/springbootdemo/azure-pipelines.yaml
+++ b/springbootdemo/azure-pipelines.yaml
@@ -4,10 +4,7 @@ trigger:
       - main
 
 pool:
-
-
   name: myjuly-agent-pool
-
 
 variables:
   RESOURCE_GROUP: 'myjulyproject-rg'
@@ -19,7 +16,6 @@ variables:
   MYSQL_DB: 'myjulydb'
 
 stages:
-
 - stage: Build
   displayName: Build Stage
   jobs:
@@ -27,7 +23,6 @@ stages:
       displayName: Build Spring Boot App
       steps:
         - checkout: self
-
         - task: Maven@3
           inputs:
             mavenPomFile: 'springbootdemo/pom.xml'
@@ -52,23 +47,11 @@ stages:
             scriptLocation: 'inlineScript'
             inlineScript: |
               az group create --name $(RESOURCE_GROUP) --location $(LOCATION)
-              az appservice plan create --name $(APP_SERVICE_PLAN) --resource-group $(RESOURCE_GROUP) --sku B1 --is-linux
+              az appservice plan create --name $(APP_SERVICE_PLAN) --resource-group $(RESOURCE_GROUP) --sku B1s --is-linux
               az webapp create --resource-group $(RESOURCE_GROUP) --plan $(APP_SERVICE_PLAN) --name $(APP_NAME) --runtime "JAVA|17-java17"
-              az mysql flexible-server create \
-                --resource-group $(RESOURCE_GROUP) \
-                --name $(MYSQL_SERVER_NAME) \
-                --admin-user $(MYSQL_ADMIN) \
-                --admin-password $(MYSQL_PASSWORD) \
-                --sku-name Standard_B1ms \
-                --location $(LOCATION) \
-                --storage-size 32 \
-                --version 8.0 \
-                --public-access 0.0.0.0
+              az mysql flexible-server create --resource-group $(RESOURCE_GROUP) --name $(MYSQL_SERVER_NAME) --admin-user $(MYSQL_ADMIN) --admin-password $(MYSQL_PASSWORD) --sku-name Standard_B1s --location $(LOCATION) --storage-size 32 --version 8.0 --public-access 0.0.0.0
               az mysql flexible-server db create --resource-group $(RESOURCE_GROUP) --server-name $(MYSQL_SERVER_NAME) --database-name $(MYSQL_DB)
-              az webapp config appsettings set \
-                --resource-group $(RESOURCE_GROUP) \
-                --name $(APP_NAME) \
-                --settings MYSQL_HOST=$(MYSQL_SERVER_NAME).mysql.database.azure.com MYSQL_DB=$(MYSQL_DB) MYSQL_USER=$(MYSQL_ADMIN)@$(MYSQL_SERVER_NAME) MYSQL_PASSWORD=$(MYSQL_PASSWORD)
+              az webapp config appsettings set --resource-group $(RESOURCE_GROUP) --name $(APP_NAME) --settings MYSQL_HOST=$(MYSQL_SERVER_NAME).mysql.database.azure.com MYSQL_DB=$(MYSQL_DB) MYSQL_USER=$(MYSQL_ADMIN)@$(MYSQL_SERVER_NAME) MYSQL_PASSWORD=$(MYSQL_PASSWORD)
 
         - task: AzureWebApp@1
           displayName: 'Deploy Spring Boot App'
