--- a/springbootdemo/azure-pipelines.yaml
+++ b/springbootdemo/azure-pipelines.yaml
@@ -47,7 +47,7 @@ stages:
             scriptLocation: 'inlineScript'
             inlineScript: |
               az group create --name $(RESOURCE_GROUP) --location $(LOCATION)
-              az appservice plan create --name $(APP_SERVICE_PLAN) --resource-group $(RESOURCE_GROUP) --sku B1s --is-linux
+              az appservice plan create --name $(APP_SERVICE_PLAN) --resource-group $(RESOURCE_GROUP) --sku Standard_B1s --is-linux
               az webapp create --resource-group $(RESOURCE_GROUP) --plan $(APP_SERVICE_PLAN) --name $(APP_NAME) --runtime "JAVA|17-java17"
               az mysql flexible-server create --resource-group $(RESOURCE_GROUP) --name $(MYSQL_SERVER_NAME) --admin-user $(MYSQL_ADMIN) --admin-password $(MYSQL_PASSWORD) --sku-name Standard_B1s --location $(LOCATION) --storage-size 32 --version 8.0 --public-access 0.0.0.0
               az mysql flexible-server db create --resource-group $(RESOURCE_GROUP) --server-name $(MYSQL_SERVER_NAME) --database-name $(MYSQL_DB)
