--- a/springbootdemo/azure-pipelines.yaml
+++ b/springbootdemo/azure-pipelines.yaml
@@ -14,6 +14,8 @@ variables:
   MYSQL_SERVER_NAME: 'myjulyprojectmysql'
   MYSQL_ADMIN: 'dbadmin'
   MYSQL_DB: 'myjulydb'
+  MYSQL_PASSWORD: 'P@ssw0rd'
+  
 
 stages:
 - stage: Build
