--- a/springbootdemo/src/main/resources/application.properties
+++ b/springbootdemo/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=springbootdemo
 server.port=8083
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://myjulyprojectmysql:3306/sprwip
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://myjulyprojectmysql:3306/myjulydb
+spring.datasource.username=dbadmin
 spring.datasource.password=P@ssw0rd
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
