--- a/springbootdemo/src/main/resources/application.properties
+++ b/springbootdemo/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=springbootdemo
 server.port=8083
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://myjulyprojectmysql:3306/myjulydb
+spring.datasource.url=jdbc:mysql://myjuly-mysqlserver:3306/myjulydb
 spring.datasource.username=dbadmin
 spring.datasource.password=P@ssw0rd
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
