--- a/springbootdemo/azure-pipelines.yaml
+++ b/springbootdemo/azure-pipelines.yaml
@@ -92,7 +92,7 @@ stages:
                    MYSQL_HOST=$mysqlHost `
                    MYSQL_DB=$mysqlDb `
                    MYSQL_USER=$mysqlUser `
-                   MYSQL_PASSWORD=$mysqlPassword
+                   MYSQL_PASSWORD=$mysqlPasswordd
 
               Write-Output "✅ WebApp mapped to related DB credentials Stage Completed"
               $webappUrl = az webapp show --name $(APP_NAME) --resource-group $(RESOURCE_GROUP) --query defaultHostName -o tsv
