--- a/springbootdemo/azure-pipelines.yaml
+++ b/springbootdemo/azure-pipelines.yaml
@@ -10,7 +10,7 @@ variables:
   RESOURCE_GROUP: 'myjulyproject-rg'
   APP_SERVICE_PLAN: 'myjulyproject-plan'
   APP_NAME: 'myjulyproject-app'
-  MYSQL_SERVER_NAME: 'myjuly-mysqlserv02'
+  MYSQL_SERVER_NAME: 'myjuly-mysqlserv03'
   MYSQL_ADMIN: 'dbadmin'
   MYSQL_DB: 'myjulydb'
   MYSQL_PASSWORD: 'P@ssw0rd'
@@ -54,7 +54,7 @@ stages:
               Write-Output "WebApp Creation Stage Completed"
               az mysql flexible-server create --resource-group $(RESOURCE_GROUP) --name $(MYSQL_SERVER_NAME) --admin-user $(MYSQL_ADMIN) --admin-password $(MYSQL_PASSWORD) --sku-name Standard_B1ms --location $(LOCATION) --storage-size 32 --version 8.4 --public-access 0.0.0.0
               $resourceGroup = "myjulyproject-rg"
-              $mysqlServerName = "myjuly-mysqlserv02"
+              $mysqlServerName = "myjuly-mysqlserv03"
             
               $retryCount = 0
               $maxRetries = 10
@@ -80,7 +80,7 @@ stages:
                    exit 1
                }
                
-              az mysql flexible-server db create --resource-group $(RESOURCE_GROUP) --server-name $(MYSQL_SERVER_NAME) --database-name $(MYSQL_DB)           
+              az mysql flexible-server db create --resource-group $(RESOURCE_GROUP) --server-name $(MYSQL_SERVER_NAME) --database-name myjulydb          
               Write-Output " DB Creation Completed "
               $mysqlHost = "$env:MYSQL_SERVER_NAME.mysql.database.azure.com"
               $mysqlDb = "$env:MYSQL_DB"
