--- a/springbootdemo/azure-pipelines.yaml
+++ b/springbootdemo/azure-pipelines.yaml
@@ -10,7 +10,7 @@ variables:
   RESOURCE_GROUP: 'myjulyproject-rg'
   APP_SERVICE_PLAN: 'myjulyproject-plan'
   APP_NAME: 'myjulyproject-app'
-  MYSQL_SERVER_NAME: 'myjuly-mysqlserv04'
+  MYSQL_SERVER_NAME: 'myjuly-mysqlserv05'
   MYSQL_ADMIN: 'dbadmin'
   MYSQL_DB: 'myjulydb'
   MYSQL_PASSWORD: 'P@ssw0rd'
@@ -98,18 +98,36 @@ stages:
                 --database-name $env:MYSQL_DB
               Write-Output "✅ DB schema creation completed"
 
-              # Set application settings
+                             # Just to verify variables first
+              Write-Output "RESOURCE_GROUP = $env:RESOURCE_GROUP"
+              Write-Output "APP_NAME = $env:APP_NAME"
+              Write-Output "MYSQL_SERVER_NAME = $env:MYSQL_SERVER_NAME"
+              Write-Output "MYSQL_ADMIN = $env:MYSQL_ADMIN"
+              Write-Output "MYSQL_DB = $env:MYSQL_DB"
+              Write-Output "MYSQL_PASSWORD = $env:MYSQL_PASSWORD"
+               
+              # Construct variables with proper expansion
               $mysqlHost = "$($env:MYSQL_SERVER_NAME).mysql.database.azure.com"
+              $mysqlDb = $env:MYSQL_DB
               $mysqlUser = "$($env:MYSQL_ADMIN)@$($env:MYSQL_SERVER_NAME)"
+              $mysqlPassword = $env:MYSQL_PASSWORD
+               
+              Write-Output "Setting app settings with:"
+              Write-Output "MYSQL_HOST = $mysqlHost"
+              Write-Output "MYSQL_DB = $mysqlDb"
+              Write-Output "MYSQL_USER = $mysqlUser"
+              "
 
-              az webapp config appsettings set `
-                --resource-group $env:RESOURCE_GROUP `
-                --name $env:APP_NAME `
-                --settings `
-                  MYSQL_HOST=$mysqlHost `
-                  MYSQL_DB=$env:MYSQL_DB `
-                  MYSQL_USER=$mysqlUser `
-                  MYSQL_PASSWORD=$env:MYSQL_PASSWORD
+              # Now set the app settings using the variables above
+               az webapp config appsettings set `
+                 --resource-group $env:RESOURCE_GROUP `
+                 --name $env:APP_NAME `
+                 --settings `
+                   MYSQL_HOST=$mysqlHost `
+                   MYSQL_DB=$mysqlDb `
+                   MYSQL_USER=$mysqlUser `
+                   MYSQL_PASSWORD=$mysqlPasswordd
+
 
               Write-Output "✅ WebApp mapped to related DB credentials"
 
