--- a/springbootdemo/azure-pipelines.yaml
+++ b/springbootdemo/azure-pipelines.yaml
@@ -52,7 +52,7 @@ stages:
                 --plan $env:APP_SERVICE_PLAN `
                 --name $env:APP_NAME `
                 --runtime "JAVA:17-java17"
-              Write-Output "✅ WebApp creation completed"
+              Write-Output " WebApp creation completed"
 
               az mysql flexible-server create `
                 --resource-group $env:RESOURCE_GROUP `
@@ -64,7 +64,7 @@ stages:
                 --storage-size 32 `
                 --version 8.4 `
                 --public-access 0.0.0.0
-              Write-Output "✅ MySQL server creation initiated"
+              Write-Output " MySQL server creation initiated"
 
               # Wait for server to be ready
               $retryCount = 0
@@ -77,17 +77,17 @@ stages:
                   --query "state" -o tsv
 
                 if ($status -eq "Ready") {
-                  Write-Output "✅ MySQL server is ready."
+                  Write-Output " MySQL server is ready."
                   break
                 }
 
-                Write-Output "⏳ Waiting for MySQL server to be ready... (current state: $status)"
+                Write-Output " Waiting for MySQL server to be ready... (current state: $status)"
                 Start-Sleep -Seconds 15
                 $retryCount++
               }
 
               if ($status -ne "Ready") {
-                Write-Output "❌ MySQL server did not become ready within expected time."
+                Write-Output " MySQL server did not become ready within expected time."
                 exit 1
               }
 
@@ -96,7 +96,7 @@ stages:
                 --resource-group $env:RESOURCE_GROUP `
                 --server-name $env:MYSQL_SERVER_NAME `
                 --database-name $env:MYSQL_DB
-              Write-Output "✅ DB schema creation completed"
+              Write-Output " DB schema creation completed"
 
                              # Just to verify variables first
               Write-Output "RESOURCE_GROUP = $env:RESOURCE_GROUP"
@@ -129,13 +129,13 @@ stages:
                    MYSQL_PASSWORD=$mysqlPasswordd
 
 
-              Write-Output "✅ WebApp mapped to related DB credentials"
+              Write-Output " WebApp mapped to related DB credentials"
 
               $webappUrl = az webapp show `
                 --name $env:APP_NAME `
                 --resource-group $env:RESOURCE_GROUP `
                 --query defaultHostName -o tsv
-              Write-Output "🌐 WebApp URL: https://$webappUrl"
+              Write-Output " WebApp URL: https://$webappUrl"
 
         - task: AzureWebApp@1
           displayName: 'Deploy Spring Boot App'
