--- a/springbootdemo/azure-pipelines.yaml
+++ b/springbootdemo/azure-pipelines.yaml
@@ -123,18 +123,18 @@ stages:
                  --resource-group $env:RESOURCE_GROUP `
                  --name $env:APP_NAME `
                  --settings `
-                      MYSQL_HOST=$mysqlHost `
-                      MYSQL_DB=$mysqlDb `
-                      MYSQL_USER=$mysqlUser `
-                      MYSQL_PASSWORD=$mysqlPasswordd
-
-              Write-Output " WebAppl mapped to related DB credentials"
+                     MYSQL_HOST=$mysqlHost `
+                     MYSQL_DB=$mysqlDb `
+                     MYSQL_USER=$mysqlUser `
+                     MYSQL_PASSWORD=$mysqlPassword
+                      
+              
 
               $webappUrl = az webapp show `
                 --name $env:APP_NAME `
                 --resource-group $env:RESOURCE_GROUP `
                 --query defaultHostName -o tsv
-              Write-Output " WebAppl URL: https://$webappUrl"
+              
 
         - task: AzureWebApp@1
           displayName: 'Deploy Spring Boot App'
