--- a/springbootdemo/src/main/resources/application.properties
+++ b/springbootdemo/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=springbootdemo
 server.port=8083
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://myjuly-mysqlserver:3306/myjulydb
-spring.datasource.username=dbadmin
-spring.datasource.password=P@ssw0rd
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/${MYSQL_DB:testdb}
+spring.datasource.username=${MYSQL_USER:root}
+spring.datasource.password=${MYSQL_PASSWORD:root}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
