--- a/springbootdemo/azure-pipelines.yaml
+++ b/springbootdemo/azure-pipelines.yaml
@@ -10,7 +10,7 @@ variables:
   RESOURCE_GROUP: 'myjulyproject-rg'
   APP_SERVICE_PLAN: 'myjulyproject-plan'
   APP_NAME: 'myjulyproject-app'
-  MYSQL_SERVER_NAME: 'myjuly-mysqlserv07'
+  MYSQL_SERVER_NAME: 'myjuly-mysqlserv08'
   MYSQL_ADMIN: 'dbadmin'
   MYSQL_DB: 'myjulydb'
   MYSQL_PASSWORD: 'P@ssw0rd'
@@ -142,4 +142,10 @@ stages:
             azureSubscription: 'myfirstconn'
             appType: 'webAppLinux'
             appName: '$(APP_NAME)'
-            package: '$(System.DefaultWorkingDirectory)/target/*.jar'
+            package: '$(System.DefaultWorkingDirectory)/springbootdemo/target/*.jar'
+            
+        - powershell: |
+             Write-Output "System.DefaultWorkingDirectory: $(System.DefaultWorkingDirectory)"
+             Get-ChildItem -Path "$(System.DefaultWorkingDirectory)" -Recurse
+          displayName: 'Print System.DefaultWorkingDirectory and list files'            
+         
