--- a/springbootdemo/pom.xml
+++ b/springbootdemo/pom.xml
@@ -68,12 +68,14 @@
 	</dependencies>
 
 	<build>
+		<finalName>springbootdemo</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-	</build>
+    </build>
+
 
 </project>
